Compute correct sticky box constraints within scrollable containers

Currently calculating the skipped offset between sticky and its
containing block assumes that the latter is not scrollable. However,
when it is we should ignore the scroll offset from the container
otherwise scrolling the container would cause the sticky offset
incorrectly double accumulated.

Bug: 841551
Change-Id: Ib49aaa74808847dcf6fce7dc0db9ac4d2de06c64
Reviewed-on: https://chromium-review.googlesource.com/1054488
Commit-Queue: Yi Gu <yigu@chromium.org>
Reviewed-by: Robert Flack <flackr@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#564276}(cherry picked from commit d5270f6e22964848928f2f6a6d2263d012186e24)
Reviewed-on: https://chromium-review.googlesource.com/1087333
Reviewed-by: Yi Gu <yigu@chromium.org>
Cr-Commit-Position: refs/branch-heads/3440@{#209}
Cr-Branched-From: 010ddcfda246975d194964ccf20038ebbdec6084-refs/heads/master@{#561733}