third_party/blink/renderer/core/layout/layout_object.h
@@ -1333,7 +1333,8 @@ class CORE_EXPORT LayoutObject : public ImageResourceObserver,
 
   // Return the offset from the container() layoutObject (excluding transforms
   // and multicol).
-  virtual LayoutSize OffsetFromContainer(const LayoutObject*) const;
+  LayoutSize OffsetFromContainer(const LayoutObject*,
+                                 bool ignore_scroll_offset = false) const;
   // Return the offset from an object up the container() chain. Asserts that
   // none of the intermediate objects have transforms.
   LayoutSize OffsetFromAncestorContainer(const LayoutObject*) const;
@@ -2161,6 +2162,12 @@ class CORE_EXPORT LayoutObject : public ImageResourceObserver,
   virtual LayoutRect LocalVisualRectIgnoringVisibility() const;
 
   virtual bool CanBeSelectionLeafInternal() const { return false; }
+
+  virtual LayoutSize OffsetFromContainerInternal(
+      const LayoutObject*,
+      bool ignore_scroll_offset) const;
+  LayoutSize OffsetFromScrollableContainer(const LayoutObject*,
+                                           bool ignore_scroll_offset) const;
 
  private:
   // Used only by applyFirstLineChanges to get a first line style based off of a
